add null and duplicate checks

--- a/bnz-aa-mle-technical.ipynb
+++ b/bnz-aa-mle-technical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "└──────────────┴─────────────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "└─────────┴─────────────────┴──────────────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "└──────────────────────────────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,6 +681,154 @@
     "from sklearn.metrics import root_mean_squared_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Filled jobs_Actual                                          0\n",
+       "Total earnings_Actual                                       0\n",
+       "Operating profit_Unadjusted                                 0\n",
+       "Purchases and operating expenditure_Unadjusted              0\n",
+       "Salaries and wages_Unadjusted                               0\n",
+       "Sales (operating income)_Unadjusted                         0\n",
+       "Enterprise Count                                            0\n",
+       "Year_2016                                                   0\n",
+       "Year_2017                                                   0\n",
+       "Year_2018                                                   0\n",
+       "Year_2019                                                   0\n",
+       "Year_2020                                                   0\n",
+       "Year_2021                                                   0\n",
+       "Year_2022                                                   0\n",
+       "Year_2023                                                   0\n",
+       "Month_03                                                    0\n",
+       "Month_06                                                    0\n",
+       "Month_09                                                    0\n",
+       "Month_12                                                    0\n",
+       "Jobs_per_Enterprise                                         0\n",
+       "Earnings_per_Enterprise                                     0\n",
+       "Profit_per_Enterprise                                       0\n",
+       "Expenditure_per_Enterprise                                  0\n",
+       "Salaries_per_Enterprise                                     0\n",
+       "Sales_per_Enterprise                                        0\n",
+       "Industry_Accommodation and Food Services                    0\n",
+       "Industry_Administrative and Support Services                0\n",
+       "Industry_Arts and Recreation Services                       0\n",
+       "Industry_Construction                                       0\n",
+       "Industry_Education and Training                             0\n",
+       "Industry_Electricity, Gas, Water and Waste Services         0\n",
+       "Industry_Health Care and Social Assistance                  0\n",
+       "Industry_Information Media and Telecommunications           0\n",
+       "Industry_Mining                                             0\n",
+       "Industry_Other Services                                     0\n",
+       "Industry_Professional, Scientific and Technical Services    0\n",
+       "Industry_Rental, Hiring and Real Estate Services            0\n",
+       "Industry_Retail Trade                                       0\n",
+       "Industry_Transport, Postal and Warehousing                  0\n",
+       "Industry_Wholesale Trade                                    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "industry_df.isnull().sum() # check for null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Filled jobs_Actual</th>\n",
+       "      <th>Total earnings_Actual</th>\n",
+       "      <th>Operating profit_Unadjusted</th>\n",
+       "      <th>Purchases and operating expenditure_Unadjusted</th>\n",
+       "      <th>Salaries and wages_Unadjusted</th>\n",
+       "      <th>Sales (operating income)_Unadjusted</th>\n",
+       "      <th>Enterprise Count</th>\n",
+       "      <th>Year_2016</th>\n",
+       "      <th>Year_2017</th>\n",
+       "      <th>Year_2018</th>\n",
+       "      <th>Year_2019</th>\n",
+       "      <th>Year_2020</th>\n",
+       "      <th>Year_2021</th>\n",
+       "      <th>Year_2022</th>\n",
+       "      <th>Year_2023</th>\n",
+       "      <th>Month_03</th>\n",
+       "      <th>Month_06</th>\n",
+       "      <th>Month_09</th>\n",
+       "      <th>Month_12</th>\n",
+       "      <th>Jobs_per_Enterprise</th>\n",
+       "      <th>Earnings_per_Enterprise</th>\n",
+       "      <th>Profit_per_Enterprise</th>\n",
+       "      <th>Expenditure_per_Enterprise</th>\n",
+       "      <th>Salaries_per_Enterprise</th>\n",
+       "      <th>Sales_per_Enterprise</th>\n",
+       "      <th>Industry_Accommodation and Food Services</th>\n",
+       "      <th>Industry_Administrative and Support Services</th>\n",
+       "      <th>Industry_Arts and Recreation Services</th>\n",
+       "      <th>Industry_Construction</th>\n",
+       "      <th>Industry_Education and Training</th>\n",
+       "      <th>Industry_Electricity, Gas, Water and Waste Services</th>\n",
+       "      <th>Industry_Health Care and Social Assistance</th>\n",
+       "      <th>Industry_Information Media and Telecommunications</th>\n",
+       "      <th>Industry_Mining</th>\n",
+       "      <th>Industry_Other Services</th>\n",
+       "      <th>Industry_Professional, Scientific and Technical Services</th>\n",
+       "      <th>Industry_Rental, Hiring and Real Estate Services</th>\n",
+       "      <th>Industry_Retail Trade</th>\n",
+       "      <th>Industry_Transport, Postal and Warehousing</th>\n",
+       "      <th>Industry_Wholesale Trade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Filled jobs_Actual, Total earnings_Actual, Operating profit_Unadjusted, Purchases and operating expenditure_Unadjusted, Salaries and wages_Unadjusted, Sales (operating income)_Unadjusted, Enterprise Count, Year_2016, Year_2017, Year_2018, Year_2019, Year_2020, Year_2021, Year_2022, Year_2023, Month_03, Month_06, Month_09, Month_12, Jobs_per_Enterprise, Earnings_per_Enterprise, Profit_per_Enterprise, Expenditure_per_Enterprise, Salaries_per_Enterprise, Sales_per_Enterprise, Industry_Accommodation and Food Services, Industry_Administrative and Support Services, Industry_Arts and Recreation Services, Industry_Construction, Industry_Education and Training, Industry_Electricity, Gas, Water and Waste Services, Industry_Health Care and Social Assistance, Industry_Information Media and Telecommunications, Industry_Mining, Industry_Other Services, Industry_Professional, Scientific and Technical Services, Industry_Rental, Hiring and Real Estate Services, Industry_Retail Trade, Industry_Transport, Postal and Warehousing, Industry_Wholesale Trade]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "industry_df[industry_df.duplicated()] # check if any rows are duplicates"
    ]
   },
   {
